--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-data": "^2.2"
     },
     "require-dev": {
